--- a/index.html
+++ b/index.html
@@ -19,26 +19,33 @@
   </header>
 
   <!-- Navigasi bar -->
-  <nav class="containerNav">
-    <a class="nav"><img class="img-brand" src="assets/logo_kahf.png" alt="logo"></a>
-    <ul class="nav">
-      <li class="nav-item">
-        <a class="nav-link active" aria-current="page" href="#">Home</a>
-      </li>
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-          Product
-        </a>
-        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <li><a class="dropdown-item text-nav" href="#">Face Wash</a></li>
-          <li><a class="dropdown-item text-nav" href="#">Body Wash</a></li>
-          <li><a class="dropdown-item text-nav" href="#">Fragrance</a></li>
-        </ul>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Contact</a>
-      </li>
-    </ul>
+  <nav class="navbar navbar-expand-lg navbar-light containerNav">
+    <div class="container-fluid">
+        <a class="nav"><img class="img-brand" src="assets/logo_kahf.png" alt="logo"></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        Product
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <li><a class="dropdown-item text-nav" href="#">Face Wash</a></li>
+                        <li><a class="dropdown-item text-nav" href="#">Body Wash</a></li>
+                        <li><a class="dropdown-item text-nav" href="#">Fragrance</a></li>
+                    </ul>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Contact</a>
+              </li>
+            </ul>
+        </div>
+    </div>
   </nav>
 
   <!-- Main content -->
@@ -47,7 +54,7 @@
     <img class="banner" src="assets/kahf_product1.jpg" alt="banner">
 
     <!-- Carousel slide Bootstrap -->
-    <div id="carouselExampleSlidesOnly" class="carousel slide overlayImage" data-bs-ride="carousel">
+    <div id="overlay_image" class="carousel slide overlayImage" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
             <img src="assets/kahf1.png" class="d-block w-100" alt="...">
@@ -71,7 +78,7 @@
     </div>
 
     <!-- Carousel slide Bootstrap -->
-    <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
             <img src="assets/face_care.jpg" class="d-block w-100" alt="...">
