--- a/index.html
+++ b/index.html
@@ -73,8 +73,14 @@
     </div>
 
     <div class="container-img-poster">
+      <h4>Product</h4>
       <img class="img-poster" src="assets/kahf_facewash.jpg" alt="image">
       <img class="img-poster" src="assets/kahf_fragrance.jpg" alt="image">
+    </div>
+    <div class="container-img-poster">
+      <h4>________</h4>
+      <img class="img-poster" src="assets/kahf_bodywash.jpg" alt="image">
+      <img class="img-poster" src="assets/scrub.jpg" alt="image">
     </div>
 
     <!-- Carousel slide Bootstrap -->
@@ -91,9 +97,27 @@
         </div>
       </div>
     </div>
+
+    <div class="container-form">
+      
+
+    </div>
   </main>
   <footer>
-    <h2>dednejndjendjen</h2>
+    <form action="https://formspree.io/f/mvgpglda" method="post">
+      <fieldset>
+          <label for="name">Full Name:</label>
+          <input class="css-format-local" type="text" id="name" name="name" required>
+
+          <label for="email">Email:</label>
+          <input class="css-format-local" type="email" id="email" name="email" required>
+
+          <label for="message">Message:</label>
+          <textarea id="message" name="message" required></textarea>
+      </fieldset>
+      <br>
+      <input class="css-button-local" type="submit" value="Send">
+  </form>
   </footer>
 </body>
 </html>
