--- a/fragrance.html
+++ b/fragrance.html
@@ -28,7 +28,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -37,7 +37,7 @@
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <li><a class="dropdown-item text-nav" href="face_wash.html#face_wash">Face Wash</a></li>
                         <li><a class="dropdown-item text-nav" href="body_wash.html#body_wash">Body Wash</a></li>
-                        <li><a class="dropdown-item text-nav" href="fragrance.html#fragrance">Fragrance</a></li>
+                        <li><a class="dropdown-item text-nav" href="#">Fragrance</a></li>
                     </ul>
                 </li>
                 <li class="nav-item">
@@ -66,21 +66,46 @@
     </div>
 
     <!-- Image-info -->
-    <div class="container-img">
+    <div id="fragrance" class="container-img">
       <img class="img-info" src="assets/kahf_model1.jpg" alt="image">
       <img class="img-info" src="assets/kahf_model2.jpeg" alt="image">
       <img class="img-info" src="assets/kahf_model3.jpg" alt="image">
     </div>
 
-    <div class="container-img-poster">
+    <div class="container-card">
       <h4>Product</h4>
-      <img class="img-poster" src="assets/kahf_facewash.jpg" alt="image">
-      <img class="img-poster" src="assets/kahf_fragrance.jpg" alt="image">
-    </div>
-    <div class="container-img-poster">
-      <h4>________</h4>
-      <img class="img-poster" src="assets/kahf_bodywash.jpg" alt="image">
-      <img class="img-poster" src="assets/scrub.jpg" alt="image">
+      <div class="card">
+        <img src="assets/parfum_black.jpg" class="card-img-top" alt="image">
+        <div class="card-body">
+          <h5 class="card-title">Sabun Mandi Pria</h5>
+          <p class="card-text">Kahf brightening and cooling body wash 200 ml</p>
+          <a href="#" class="btn btn-primary">E-Commerce</a>
+        </div>
+      </div>
+      <div class="card">
+        <img src="assets/parfum_blue.jpg" class="card-img-top" alt="image">
+        <div class="card-body">
+          <h5 class="card-title">Sabun Mandi Pria</h5>
+          <p class="card-text">Kahf acne fight and relaxing body wash 200 ml</p>
+          <a href="#" class="btn btn-primary">E-Commerce</a>
+        </div>
+      </div>
+      <div class="card">
+        <img src="assets/parfum_brown.jpg" class="card-img-top" alt="image">
+        <div class="card-body">
+          <h5 class="card-title">Sabun Mandi Pria</h5>
+          <p class="card-text">Kahf acne fight and relaxing body wash 200 ml</p>
+          <a href="#" class="btn btn-primary">E-Commerce</a>
+        </div>
+      </div>
+      <div class="card">
+        <img src="assets/parfum_red.jpg" class="card-img-top" alt="image">
+        <div class="card-body">
+          <h5 class="card-title">Sabun Mandi Pria</h5>
+          <p class="card-text">Kahf acne fight and relaxing body wash 200 ml</p>
+          <a href="#" class="btn btn-primary">E-Commerce</a>
+        </div>
+      </div>
     </div>
 
     <!-- Carousel slide Bootstrap -->
