--- a/face_wash.html
+++ b/face_wash.html
@@ -28,14 +28,14 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                         Product
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item text-nav" href="face_wash.html#face_wash">Face Wash</a></li>
+                        <li><a class="dropdown-item text-nav" href="#">Face Wash</a></li>
                         <li><a class="dropdown-item text-nav" href="body_wash.html#body_wash">Body Wash</a></li>
                         <li><a class="dropdown-item text-nav" href="fragrance.html#fragrance">Fragrance</a></li>
                     </ul>
@@ -66,21 +66,46 @@
     </div>
 
     <!-- Image-info -->
-    <div class="container-img">
+    <div id="face_wash" class="container-img">
       <img class="img-info" src="assets/kahf_model1.jpg" alt="image">
       <img class="img-info" src="assets/kahf_model2.jpeg" alt="image">
       <img class="img-info" src="assets/kahf_model3.jpg" alt="image">
     </div>
 
-    <div class="container-img-poster">
+    <div class="container-card">
       <h4>Product</h4>
-      <img class="img-poster" src="assets/kahf_facewash.jpg" alt="image">
-      <img class="img-poster" src="assets/kahf_fragrance.jpg" alt="image">
-    </div>
-    <div class="container-img-poster">
-      <h4>________</h4>
-      <img class="img-poster" src="assets/kahf_bodywash.jpg" alt="image">
-      <img class="img-poster" src="assets/scrub.jpg" alt="image">
+      <div class="card">
+        <img src="assets/kahf_green.jpg" class="card-img-top" alt="image">
+        <div class="card-body">
+          <h5 class="card-title">Sabun Wajah Pria</h5>
+          <p class="card-text">Kahf oil and Acne care face wash 100 ml</p>
+          <a href="#" class="btn btn-primary">E-Commerce</a>
+        </div>
+      </div>
+      <div class="card">
+        <img src="assets/kahf_blue.jpg" class="card-img-top" alt="image">
+        <div class="card-body">
+          <h5 class="card-title">Sabun Wajah Pria</h5>
+          <p class="card-text">Kahf skin energizing and brightening face wash 100 ml</p>
+          <a href="#" class="btn btn-primary">E-Commerce</a>
+        </div>
+      </div>
+      <div class="card">
+        <img src="assets/kahf_brown.jpg" class="card-img-top" alt="image">
+        <div class="card-body">
+          <h5 class="card-title">Scrub Wajah Pria</h5>
+          <p class="card-text">Kahf gentle exafolating face scrub 100 ml</p>
+          <a href="#" class="btn btn-primary">E-Commerce</a>
+        </div>
+      </div>
+      <div class="card">
+        <img src="assets/kahf_black.jpg" class="card-img-top" alt="image">
+        <div class="card-body">
+          <h5 class="card-title">Sabun Wajah Pria</h5>
+          <p class="card-text">Kahf triple action oil and comedo defense face wash 100 ml</p>
+          <a href="#" class="btn btn-primary">E-Commerce</a>
+        </div>
+      </div>
     </div>
 
     <!-- Carousel slide Bootstrap -->
@@ -96,11 +121,6 @@
           <img src="assets/fragnance.jpg" class="d-block w-100" alt="...">
         </div>
       </div>
-    </div>
-
-    <div class="container-form">
-      
-
     </div>
   </main>
   <footer>
