--- a/body_wash.html
+++ b/body_wash.html
@@ -72,8 +72,13 @@
       <img class="img-info" src="assets/kahf_model3.jpg" alt="image">
     </div>
 
+    <img class="background-img" src="assets/background.jpg" alt="image">
+
     <div class="container-card">
       <h4>Product</h4>
+    </div>
+
+    <div class="container-card">
       <div class="card">
         <img src="assets/bodywash_blue.jpg" class="card-img-top" alt="image">
         <div class="card-body">
@@ -82,6 +87,7 @@
           <a href="#" class="btn btn-primary">E-Commerce</a>
         </div>
       </div>
+      <hr>
       <div class="card">
         <img src="assets/bodywash_green.jpg" class="card-img-top" alt="image">
         <div class="card-body">
