--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     </ul>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Contact</a>
+                  <a class="nav-link" href="contact.html">Contact</a>
               </li>
             </ul>
         </div>
@@ -101,20 +101,18 @@
     </div>
   </main>
   <footer>
-    <form action="https://formspree.io/f/mvgpglda" method="post">
-      <fieldset>
-          <label for="name">Full Name:</label>
-          <input class="css-format-local" type="text" id="name" name="name" required>
+    <h3>Kahf</h3>
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="contact.html">Contact</a>
+    </nav>
 
-          <label for="email">Email:</label>
-          <input class="css-format-local" type="email" id="email" name="email" required>
-
-          <label for="message">Message:</label>
-          <textarea id="message" name="message" required></textarea>
-      </fieldset>
-      <br>
-      <input class="css-button-local" type="submit" value="Send">
-  </form>
+    <form action="#" method="post">
+        <input type="email" name="email" id="email" placeholder="Subscribe for newsletter" required>
+        <button type="submit">Subscribe</button>
+    </form>
+    <hr>
+    <p>&copy; 2024 One Connect. All Rights Reserved.</p>
   </footer>
 </body>
 </html>
