--- a/contact.html
+++ b/contact.html
@@ -36,12 +36,12 @@
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <li><a class="dropdown-item text-nav" href="face_wash.html#face_wash">Face Wash</a></li>
-                        <li><a class="dropdown-item text-nav" href="#">Body Wash</a></li>
+                        <li><a class="dropdown-item text-nav" href="body_wash.html#body_wash">Body Wash</a></li>
                         <li><a class="dropdown-item text-nav" href="fragrance.html#fragrance">Fragrance</a></li>
                     </ul>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="contact.html">Contact</a>
+                  <a class="nav-link" href="#">Contact</a>
               </li>
             </ul>
         </div>
@@ -53,65 +53,24 @@
     <!-- Banner image -->
     <img class="banner" src="assets/kahf_product1.jpg" alt="banner">
 
-    <!-- Carousel slide Bootstrap -->
-    <div id="overlay_image" class="carousel slide overlayImage" data-bs-ride="carousel">
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-            <img src="assets/kahf1.png" class="d-block w-100" alt="...">
-        </div>
-        <div class="carousel-item">
-            <img src="assets/kahf2.png" class="d-block w-100" alt="...">
-        </div>
-      </div>
-    </div>
-
-    <!-- Image-info -->
-    <div id="body_wash" class="container-img">
-      <img class="img-info" src="assets/kahf_model1.jpg" alt="image">
-      <img class="img-info" src="assets/kahf_model2.jpeg" alt="image">
-      <img class="img-info" src="assets/kahf_model3.jpg" alt="image">
-    </div>
-
-    <img class="background-img" src="assets/background.jpg" alt="image">
-
-    <div class="container-card">
-      <h4>Product</h4>
-    </div>
-
-    <div class="container-card">
-      <div class="card">
-        <img src="assets/bodywash_blue.jpg" class="card-img-top" alt="image">
-        <div class="card-body">
-          <h5 class="card-title">Sabun Mandi Pria</h5>
-          <p class="card-text">Kahf brightening and cooling body wash 200 ml</p>
-          <a href="#" class="btn btn-primary">E-Commerce</a>
-        </div>
-      </div>
-      <hr>
-      <div class="card">
-        <img src="assets/bodywash_green.jpg" class="card-img-top" alt="image">
-        <div class="card-body">
-          <h5 class="card-title">Sabun Mandi Pria</h5>
-          <p class="card-text">Kahf acne fight and relaxing body wash 200 ml</p>
-          <a href="#" class="btn btn-primary">E-Commerce</a>
-        </div>
-      </div>
-    </div>
-
-    <!-- Carousel slide Bootstrap -->
-    <div class="carousel slide" data-bs-ride="carousel">
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-            <img src="assets/face_care.jpg" class="d-block w-100" alt="...">
-        </div>
-        <div class="carousel-item">
-            <img src="assets/body_care.jpg" class="d-block w-100" alt="...">
-        </div>
-        <div class="carousel-item">
-          <img src="assets/fragnance.jpg" class="d-block w-100" alt="...">
-        </div>
-      </div>
-    </div>
+    <form class="css-form-custom">
+        <fieldset>
+            <div class="mb-3">
+                <label for="formGroupExampleInput" class="form-label">Full Name: </label>
+                <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Name">
+            </div>
+            <div class="mb-3">
+                <label for="formGroupExampleInput2" class="form-label">Email: </label>
+                <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="@gmail.com">
+            </div>
+            <div class="mb-3">
+                <label for="exampleFormControlTextarea1" class="form-label">Message</label>
+                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+            </div>
+        </fieldset>
+        <br>
+        <input class="css-button-local" type="submit" value="Send">
+    </form>
   </main>
   <footer>
     <h3>Kahf</h3>
