--- a/body_wash.html
+++ b/body_wash.html
@@ -72,7 +72,7 @@
       <img class="img-info" src="assets/kahf_model3.jpg" alt="image">
     </div>
 
-    <img class="background-img" src="assets/background.jpg" alt="image">
+    <img class="backgroundImg" src="assets/background.jpg" alt="image">
 
     <div class="container-card">
       <h4>Product</h4>
