--- a/fragrance.html
+++ b/fragrance.html
@@ -72,7 +72,7 @@
       <img class="img-info" src="assets/kahf_model3.jpg" alt="image">
     </div>
 
-    <img class="background-img" src="assets/background.jpg" alt="image">
+    <img class="backgroundImg" src="assets/background.jpg" alt="image">
 
     <div class="container-card">
       <h4>Product</h4>
@@ -82,32 +82,32 @@
       <div class="card">
         <img src="assets/parfum_black.jpg" class="card-img-top" alt="image">
         <div class="card-body">
-          <h5 class="card-title">Sabun Mandi Pria</h5>
-          <p class="card-text">Kahf brightening and cooling body wash 200 ml</p>
+          <h5 class="card-title">Parfum Pria</h5>
+          <p class="card-text">Revered Oud</p>
           <a href="#" class="btn btn-primary">E-Commerce</a>
         </div>
       </div>
       <div class="card">
         <img src="assets/parfum_blue.jpg" class="card-img-top" alt="image">
         <div class="card-body">
-          <h5 class="card-title">Sabun Mandi Pria</h5>
-          <p class="card-text">Kahf acne fight and relaxing body wash 200 ml</p>
+          <h5 class="card-title">Parfum Pria</h5>
+          <p class="card-text">Invigorating waterfall</p>
           <a href="#" class="btn btn-primary">E-Commerce</a>
         </div>
       </div>
       <div class="card">
         <img src="assets/parfum_brown.jpg" class="card-img-top" alt="image">
         <div class="card-body">
-          <h5 class="card-title">Sabun Mandi Pria</h5>
-          <p class="card-text">Kahf acne fight and relaxing body wash 200 ml</p>
+          <h5 class="card-title">Parfum Pria</h5>
+          <p class="card-text">Kahf true brotherhood</p>
           <a href="#" class="btn btn-primary">E-Commerce</a>
         </div>
       </div>
       <div class="card">
         <img src="assets/parfum_red.jpg" class="card-img-top" alt="image">
         <div class="card-body">
-          <h5 class="card-title">Sabun Mandi Pria</h5>
-          <p class="card-text">Kahf acne fight and relaxing body wash 200 ml</p>
+          <h5 class="card-title">Parfum Pria</h5>
+          <p class="card-text">Saffron Oud</p>
           <a href="#" class="btn btn-primary">E-Commerce</a>
         </div>
       </div>
@@ -127,9 +127,6 @@
         </div>
       </div>
     </div>
-
-    <div class="container-form">
-      
 
     </div>
   </main>
